完成对transformers推理的image适配

--- a/项目模块介绍和命令集成.md
+++ b/项目模块介绍和命令集成.md
@@ -180,3 +180,29 @@ sudo docker run -d -it \
 python utils/normalize_start_time.py data/Hangzhou/4_4/anon_4_4_hangzhou_real.json --target-interval 2 --base-time 0
 python utils/normalize_start_time.py data/Hangzhou/4_4/anon_4_4_hangzhou_real.json -o data/Hangzhou/4_4/anon_4_4_hangzhou_real_2s.json
 
+
+python ts_image_service.py \
+  --checkpoint /path/to/checkpoints/Traffic_512_96_Exp_1/checkpoint.pth \
+  --learnable_image true \
+  --device cuda:0 \
+  --port 8090
+
+
+CUDA_VISIBLE_DEVICES=0,1,2,3 python run_open_LLM_with_vllm.py \
+  --llm_model gemma-3-27B \
+  --llm_path /home/data/model/gemma-3-27B/ \
+  --dataset jinan \
+  --traffic_file anon_3_4_jinan_real.json \
+  --ts_image_service_url http://127.0.0.1:8090/generate \
+  --ts_image_seq_len 25 \
+  --ts_feature_mode movement_total \
+  --ts_image_token "<image>"
+
+
+  
+python -m run --use_multi_gpu --devices 0,1
+python -m run --vlm_device_map auto --vlm_max_memory 0:20GiB,1:20GiB
+
+
+
+pip uninstall -y tensorflow tensorflow-cpu tensorflow-gpu keras tf-keras tensorflow-text tensorflow-io-gcs-filesystem
