完成image对vllm的适配

--- a/项目模块介绍和命令集成.md
+++ b/项目模块介绍和命令集成.md
@@ -165,8 +165,9 @@ LLMLight项目通过模块化设计，将传统方法、强化学习和大语言
 sudo docker run -d -it \
   --name LLMlight \
   --network host \
-  -v /home/code/LLMSTCS:/home/code/LLMSTCS \
+  -v /home/code/LLMSTSC:/home/code/LLMSTSC \
   -v /home/data/model:/home/data/model \
+  --shm-size=16g \
   --gpus all \
   llmlight
 
