添加projection train 的transform

--- a/项目模块介绍和命令集成.md
+++ b/项目模块介绍和命令集成.md
@@ -207,3 +207,4 @@ python -m run --vlm_device_map auto --vlm_max_memory 0:20GiB,1:20GiB
 
 
 pip uninstall -y tensorflow tensorflow-cpu tensorflow-gpu keras tf-keras tensorflow-text tensorflow-io-gcs-filesystem
+deepspeed --num_gpus=3 projection_train/train_projection_ppo.py 
